--- a/app/Views/travelr.html
+++ b/app/Views/travelr.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="public/js/lib/modernizr-2.5.3.min.js"></script>
 	<script type="text/javascript" src="public/js/lib/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="public/js/lib/supersized.3.2.7.min.js"></script>
+	<script type="text/javascript" src="public/js/lib/supersized.3.2.7.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	
 </head>
