location navigation implement
Signed-off-by: fpumir <fpumir@terredeweb.fr>

--- a/app/Views/travelr.html
+++ b/app/Views/travelr.html
@@ -45,8 +45,8 @@
       <nav>
         <a href="" class="pola">pola</a>
         <a href="" class="map">map</a>
-        <a href="" class="prev">prev</a>
-        <a href="" class="next">next</a>
+        <a href="<?php echo $prev ?>" class="prev">prev</a>
+        <a href="<?php echo $next ?>" class="next">next</a>
         <a href="" class="all">all</a>
         
       </nav>
