--- a/app/Views/travelr.html
+++ b/app/Views/travelr.html
@@ -66,6 +66,7 @@
   <span class="trama"></span>
   <script>
   var datas=<?php echo F3::raw($pictures) ?>;
+  var coords=<?php echo F3::raw($coords) ?>;
   </script>
   
 </body>
