--- a/public/css/travelr.css
+++ b/public/css/travelr.css
@@ -41,7 +41,7 @@ section .map .close{right:-1.6em;}
 .map{background-position: -168px -84px;left:1.1em;}
 .close{background-position: -84px -84px;}
 
-/*.trama{position: fixed;top: 0;display: block;width: 100%;height: 100%;background: transparent url('../css/img/trama.png');z-index: 1;}*/
+.trama{position: fixed;top: 0;display: block;width: 100%;height: 100%;background: transparent url('../css/img/trama.png');z-index: 1;}
 footer{position: fixed;bottom: 0;height: 2em;width: 100%;background: rgba(0,0,0,0.9) none;z-index: 3;text-align:center;}
 footer a {position:relative;line-height:1.5em;font-size:1.2em;}
 footer a::before{content:'';display:block;background: transparent url('../css/img/sprite.png')0 -210px no-repeat;width: 25px;height: 33px;position:absolute; left:-2em; bottom:-5px;}
