add frame class in .map
Signed-off-by: fpumir <fpumir@terredeweb.fr>

--- a/app/Views/travelr.html
+++ b/app/Views/travelr.html
@@ -54,7 +54,7 @@
       <p><?php echo $location->content ?></p>
       
     </div>
-    <div class="map">
+    <div class="map frame">
       <nav><a href="" class="close">close</a></nav>
       <div id="map_canvas">
       </div>
