--- a/app/Views/admin/login.html
+++ b/app/Views/admin/login.html
@@ -36,7 +36,7 @@
         <fieldset>
         <input type="text" name="userName" placeholder="username" value="<?php echo $_POST['userName'] ?>" <?php if($errorMsg['userName']){ echo 'class="error"'; } ?>/>
         <input type="password" name="pw" placeholder="password" <?php if($errorMsg['pw']){ echo 'class="error"'; } ?>/>
-        <input type="submit" value="save"/>
+        <input type="submit" value="enter"/>
       </fieldset>
      </form>
       
